# PostgreSQLCrawler

./: .gitignore  README.md  generate_embeddings.py  main.py  pyproject.toml  requirements.txt  run_speed_tests.py
interface/: README.md  webui.py
scripts/: recreate_views.py
src/sqlitecrawler/: circuit_breaker.py  comparison.py  config.py  crawl.py  database.py  database_views.py  db.py  db_operations.py  fetch.py  hashing.py  http_client.py  parse.py  postgresql_schema.py  robots.py  schema.py
tests/: conftest.py  test_circuit_breaker.py  test_hashing.py  test_robots.py
